--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
+		<link href="./styles/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<script src="js/three.js"></script>
+		<script src="src/js/three.js"></script>
 		<script>
 			const scene = new THREE.Scene();
 			var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000 );
