--- a/Alternate Game/index.html
+++ b/Alternate Game/index.html
@@ -159,7 +159,9 @@
 						gate.position.y+=0.01;
 					}
 					else{
+						if (gate.position.x<1.5){
 						gate.position.x+=0.02;	
+						}
 					}
 				}
 
