Added Div for HUD

--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -5,9 +5,12 @@
 		<title>Runner</title>
 		<style>
 			body { margin: 0; }
+			
 		</style>
         <script type="module" src="js/main.js"></script>
+		<link rel="stylesheet" type="text/css" href="./css/three.css"/>
 	</head>
 	<body>
+			<div id="info">Description</div>
 	</body>
 </html>
