added sound and fixed positions

--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -11,6 +11,9 @@
 		<link rel="stylesheet" type="text/css" href="./css/three.css"/>
 	</head>
 	<body>
+		<audio autoplay loop >
+            <source src="./audio/newrules.mp3" type="audio/mp3"></sources>
+        </audio>
 			<div id="info">Description</div>
 	</body>
 </html>
