added loading screen

--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -14,6 +14,14 @@
 		<audio autoplay loop >
             <source src="./audio/newrules.mp3" type="audio/mp3"></sources>
         </audio>
+		<section id="loading-screen">
+			<h1 id ="loading">Level 1 is currently Loading</h1>
+			<h2 id ="msg">Please bare with us.</h2>
+			
+
+			<div id="loader"></div>
+		
+		</section>
 			<div id="info">Description</div>
 	</body>
 </html>
