--- a/CGV Project/index.html
+++ b/CGV Project/index.html
@@ -35,6 +35,7 @@
                 <canvas id ="charac" width="20" height="20"></canvas>
                 <script type="module" src="./js/loadingScreen.js"></script>
             </div>
+            
         
          </div>
 	</body>
@@ -50,8 +51,16 @@
 
     level1.onclick = function() {
         window.location.href = "three.html";
+        localStorage.setItem('Level','Level 1');
     }
-
+    level2.onclick = function() {
+        window.location.href = "loading.html";
+        localStorage.setItem('Level','Level 2');
+    }
+    level3.onclick = function() {
+        window.location.href = "loading.html";
+        localStorage.setItem('Level','Level 3');
+    }
 
 
 
