ending page and loading page

--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -16,13 +16,16 @@
         </audio>
 		<section id="loading-screen">
 			<h1 id ="loading">Level 1 is currently Loading</h1>
-			<h2 id ="msg">Please bare with us.</h2>
+			<h2 id ="msg">You have 70 seconds to collect 20 coins to pass this level.</h2>
+			<h3>Do it for Dua Lipa!</h3>
 			
 
 			<div id="loader"></div>
 		
 		</section>
-			<div id="info">Description</div>
+			<div id="Score">Score</div>
+			<div id="time">Time</div>
+			<div id="Lives">Lives</div>
 		
 	</body>
 </html>
