--- a/CGV Project/endPage.html
+++ b/CGV Project/endPage.html
@@ -8,6 +8,8 @@
 			
 		</style>  
         <script type="module" src="./js/loadingScreen.js"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,300;1,400;1,500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./css/endPage.css"/>
 	</head>
 	<body>
