finely flippin pauses properly

--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -26,6 +26,7 @@
 			<div id="Score">Score</div>
 			<div id="time">Time</div>
 			<div id="Lives">Lives</div>
+			<div id='pause'>Pause</div>
 		
 	</body>
 </html>
