--- a/CGV Project/index.html
+++ b/CGV Project/index.html
@@ -55,11 +55,11 @@
         localStorage.setItem('Level','Level 1');
     }
     level2.onclick = function() {
-        window.location.href = "loading.html";
+        window.location.href = "level2.html";
         localStorage.setItem('Level','Level 2');
     }
     level3.onclick = function() {
-        window.location.href = "loading.html";
+        window.location.href = "level3.html";
         localStorage.setItem('Level','Level 3');
     }
 
