pause menu fully functional

--- a/CGV Project/endPage.html
+++ b/CGV Project/endPage.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<audio autoplay loop >
-            <source src="./audio/levitate.mp3" type="audio/mp3"></sources>
+            <source src="./audio/levitate.mp3" type="audio/mp3" volume=0.2></sources>
         </audio>
         <div id = "Info">
             <h1>Game Over !</h1>
