fixing stuffed resume lol

--- a/CGV Project/index.html
+++ b/CGV Project/index.html
@@ -44,8 +44,8 @@
 
 
 <script>
-    var vid = document.getElementById("sound");
-    vid.volume = 0.4;       
+    var sound = document.getElementById("sound");
+    sound.volume = 0.4;       
 
     const level1 = document.getElementById('level1');
     const level2 = document.getElementById('level2');
