--- a/CGV Project/three.html
+++ b/CGV Project/three.html
@@ -29,7 +29,7 @@
 			<div id='pause'>Pause</div>
 
 		<div class="pause-menu-layout" id="pause-menu">
-			<div class="pause-menu-text" id="resume">Resgdiv>
+			<div class="pause-menu-text" id="resume">Resume</div>>
 			<div class="pause-menu-text" id="mute">Mute</div>
 			<div class="pause-menu-text" id="exit">Exit</div>
 		</div>	
