--- a/CGV Project/level2.html
+++ b/CGV Project/level2.html
@@ -40,4 +40,8 @@
 	<script>
 		var levelMusic = document.getElementById("level-music");
 		levelMusic.volume = 0.75;  
+		if (window.localStorage.getItem('mute') === 'true') {
+			levelMusic.muted = true;
+
+	} 
 	</script>
