--- a/CGV Project/level3.html
+++ b/CGV Project/level3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Runner Level 2</title>
+		<title>Run 4 Dua Level 2</title>
 		<style>
 			body { margin: 0; }
 			
@@ -25,11 +25,13 @@
 		</section>
 			<div id="Score">Score</div>
 			<div id="time">Time</div>
-			<div id="Lives">Lives</div>
-			<div id='pause'>Pause</div>
+			<div id='pause'><img src = "./images/pause-button.svg" alt="Pause Button"
+				width="32"
+				height="32"/>
+			</div>
 
 		<div class="pause-menu-layout" id="pause-menu">
-			<div class="pause-menu-text" id="resume">Resume</div>>
+			<div class="pause-menu-text" id="resume">Resume</div>
 			<div class="pause-menu-text" id="mute">Mute</div>
 			<div class="pause-menu-text" id="exit">Exit</div>
 		</div>	
