--- a/CGV Project/endPage.html
+++ b/CGV Project/endPage.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Runner</title>
+		<title>Run 4 Dua</title>
 		<style>
 			body { margin: 0; }
 			
