--- a/CGV Project/index.html
+++ b/CGV Project/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Runner</title>
+		<title>Run 4 Dua</title>
 		<style>
 			body { margin: 0; }
 		</style>
@@ -19,7 +19,7 @@
         
 
         <div id="TOP">
-            <h1>Runner</h1><br>
+            <h1>Run 4 Dua</h1><br>
             <h1>Brought To You By OPEN-DL</h1>
 
         </div>
