--- a/CGV Project/failed.html
+++ b/CGV Project/failed.html
@@ -24,7 +24,7 @@
 
         <div id="Canvas" class="canvas">
             <canvas id ="charac" width="20" height="20"></canvas>
-            <script type="module" src="./js/winning.js"></script>
+            <script id = "script" type="module" src="./js/lose.js"></script>
         </div>
 		
 	</body>
