code refactor + main menu mute button

--- a/CGV Project/level1.html
+++ b/CGV Project/level1.html
@@ -7,7 +7,7 @@
 			body { margin: 0; }
 			
 		</style>
-        <script type="module" src="js/main.js"></script>
+        <script type="module" src="js/level1.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/three.css"/>
 	</head>
 	<body>
